--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 .ipynb_checkpoints/Airbnb-Zillow-data-project-checkpoint.ipynb
 .DS_Store
+.ipynb_checkpoints/Airbnb-Zillow-data-projectREVIEW-checkpoint.ipynb
+*.pyc
+.ipynb_checkpoints/zillow-checkpoint.csv
+(DC 4) Zip_Zhvi_2bedroom (1).xlsx
+Airbnb-Zillow-data-projectREVIEW.ipynb
